# csi-id

./: .gitignore  NTU_Fi_HumanID_report.md  NTU_Fi_model.py  README.md  build_applied_dataset.py  compute_ntu_fi_stats.py  dataset.py  export_results_table.py  finetune_fewshot.py  inspect_data.py  main.py  paper_main.tex  plot_ntu_fi_results.py  pyproject.toml  requirements.txt  run.py  train_all_models.py  util.py  visualize_umap_embeddings.py
figures/ntu_fi_results/: parsed_metrics.json  results.tex
応用プロジェクト/: csi_heatmap.py
