[project]
name = "wifi-csi-sensing-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops==0.4.0",
    "matplotlib>=3.8.4",
    "numpy==1.21.5",
    "pandas>=1.5.1",
    "scipy==1.7.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "mamba-ssm>=1.2.0",
]
